<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:gravity="center"
    android:orientation="vertical">

    <Button

        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/tv_sorting"
        android:textSize="@dimen/_16sdp"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_name_sorting"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/rectangle3"
        android:text="@string/dialog_ascending"
        android:textAllCaps="false"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_rating_sorting"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rectangle3"
        android:text="@string/dialog_descending"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_cancel_sorting"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"

        android:background="@android:color/transparent"
        android:text="@string/dialog_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"/>
</LinearLayout>