<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search" />

    <ListView
        android:id="@+id/simple_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:padding="@dimen/_5sdp">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/tv_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/dialog_ok"

            android:textColor="@color/colorOrange"
            android:textSize="@dimen/_18sdp" />


    </LinearLayout>


</LinearLayout>