<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63ffffff"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo.Dialog"

    >

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/x"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_shop_name_shop_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"

            />

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/thumbsup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/thanks_you_msg"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/success_order"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date_order"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="17/8/1996"
            android:textColor="@color/textFilterColor"
            android:textSize="@dimen/_20sdp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_order_no"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_order_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="0000774"
            android:textColor="@color/textFilterColor"
            android:textSize="@dimen/_20sdp"

            />


    </LinearLayout>


</RelativeLayout>