<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.dtechsystem.carefer.UI.Activities.NoInternetConnection"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/headerbg"
            android:gravity="right|center_vertical"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingRight="@dimen/_30sdp"
            android:paddingTop="@dimen/_10sdp"
            android:text="@string/tv_title_top_a_map"
            android:textColor="@color/pf_white"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111.03dp"
        android:layout_height="111.03dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/wifi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/toast_no_internet_avail"
        android:textSize="@dimen/_20sdp" />

    <Button
        android:id="@+id/reConnection"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:paddingBottom="@dimen/_15sdp"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingRight="@dimen/_25sdp"
        android:paddingTop="@dimen/_15sdp"
        android:text="@string/try_again"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_20sdp"
        android:background="@drawable/btnborder"
        android:onClick="reConnection"/>


</RelativeLayout>
