<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">






    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_120sdp"
        android:background="@android:color/white"
        android:orientation="vertical">


        <com.lamudi.phonefield.PhoneEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/et_mobile_number_amobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/phone_eg"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:visibility="gone" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/change_button"
        android:layout_width="218dp"
        android:layout_height="@dimen/_38sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:background="@drawable/rectangle2"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/btn_change"
        android:textAllCaps="false"
        android:textColor="@color/pf_white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="right"
        android:textAlignment="center"
        android:textSize="@dimen/_14sdp"
        android:text="@string/new_num" />



</RelativeLayout>